# NFL_sim

./: .gitignore  README.md  clean_feature_eng.ipynb  clock.md  compare_sim.ipynb  create_database.ipynb  create_models.ipynb  data.ipynb  depth_snaps.sql  ids.csv  inference_test.ipynb  kalman.ipynb  main.py  mermaid.md  modeling.py  nfl_analysis.ipynb  nfl_data_py.py  nn_models.ipynb  nn_zoo.ipynb  pass_or_run.ipynb  player_feature_eng.ipynb  pyproject.toml  requirements.txt  sim.ipynb  sim.py  store.json  team_stats.ipynb  week_12.csv  week_13.csv  yardline_quantiles.ipynb  zip.ipynb
data/queries/: create full ids.sql  player_feature_eng.sql  pp_new_stats.sql
exploration/: explore.ipynb  gauss_mix.ipynb  quantile.ipynb  zuko.ipynb
notebooks/betting/: corr_bets.ipynb  dk_norm.ipynb  espn_ff_league.ipynb  nfl_analysis.ipynb  nfl_corr.ipynb  pbp_analysis.ipynb  stat_curation.ipynb  test.py
notebooks/exploration/: pass_or_run.ipynb
notebooks/other_notebooks/: clean_feature_eng.ipynb  clock.ipynb  create_models.ipynb  kicker_feature_eng.ipynb  new_sim.ipynb  nn_models.ipynb  player_feature_eng.ipynb  sack_model.ipynb  sim.ipynb  team_stats.ipynb
notebooks/train_models/: field_goal_model.ipynb  out_of_bounds.ipynb  pass_yard_model.ipynb  play_type_and_clock.py  rush_yard_model copy.ipynb  rush_yard_model ordinal.ipynb  rush_yard_model.ipynb  rush_yard_model_masked.ipynb  rusher_features.ipynb  yac_model.ipynb
sim_utils/: modeling.py
src/sim_utils/: Event.py  GameModels.py  GameState.py  config.py  game.py  modeling.py  models.py  play_result.py  plays.py  pyproject.toml  setup.py  sim.py  sim2.py  sim_models.py  team.py
src/utils/: betting.py  mlb_funcs.py  probability.py  pyproject.toml  quack.py  setup.py
train_models/: play_type_and_clock.py
