[project]
name = "nfl-sim"
version = "0.1.0"
description = "Simulate NFL games at a play by play level"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "matplotlib",
    "numpy",
    "pandas",
    "protobuf",
    "requests",
    "scipy",
    "streamlit",
    "tls-client",
    "Unidecode",
    "ipykernel>=6.29.5",
    "pip>=24.3.1",
    "lxml>=5.3.0",
    "xgboost>=2.1.2",
    "scikit-learn>=1.5.2",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "ngboost>=0.5.1",
    "statsmodels>=0.14.4",
    "ipywidgets>=8.1.5",
    "torch",
    "appdirs>=1.4.4",
    "quantile-forest>=1.3.11",
    "sklearn-quantile>=0.0.32",
    "duckdb>=1.1.3",
    "nflreadpy>=0.1.3",
    "sqlalchemy>=2.0.43",
    "sqlfluff>=3.4.2",
    "fastparquet>=2024.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.setuptools.packages.find]
where = ["src"]